# groupme-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  client.py  main.py  pyproject.toml  server.py
.github/workflows/: ci.yml  publish.yml
docs/: .atlas-analysis.json  AGENTS.md  CONTRIBUTING.md  README.md  authentication.mdx  development.mdx  docs.json  index.mdx  introduction.mdx  quickstart.mdx
docs/ai-tools/: claude-code.mdx  cursor.mdx  windsurf.mdx
docs/development/: architecture.mdx  contributing.mdx
docs/essentials/: settings.mdx
docs/tools/: bots.mdx  groups.mdx  members.mdx  messages.mdx  users-blocks.mdx
oauth/: get_token.py
skill/groupme-mcp/: SKILL.md
skill/groupme-mcp/references/: tools.md
src/: __init__.py
src/groupme_mcp/: main.py  server.py
tests/: test_client.py  test_server.py
