[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "groupme-mcp"
version = "0.4.1"
description = "MCP server wrapping the GroupMe API v3"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
]

[project.scripts]
groupme-mcp = "groupme_mcp.main:main"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.0",
    "ruff>=0.15.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "S101",  # assert statements (used in tests)
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]  # disable bandit in tests

[tool.bandit]
exclude_dirs = ["tests"]
skips = []

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
